--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": "^5.3.9 | ^7.0",
-        "dhii/espresso": "dev-master"
+        "dhii/espresso": "dev-release/0.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
@@ -32,18 +32,6 @@
         {
             "type": "vcs",
             "url": "https://github.com/Dhii/espresso-abstract"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/Dhii/espresso-interface"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/Dhii/evaluable-interface"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/Dhii/data-key-value-aware-interface"
         }
     ]
 }
