--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": "^5.3.9 | ^7.0",
-        "dhii/espresso": "dev-release/0.1"
+        "dhii/expression-abstract": "dev-release/0.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
@@ -25,10 +25,6 @@
         }
     },
     "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/Dhii/espresso"
-        },
         {
             "type": "vcs",
             "url": "https://github.com/Dhii/espresso-abstract"
