--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -12,9 +12,11 @@ auxiliary.org-netbeans-modules-php-phpunit.test_2e_run_2e_all=false
 auxiliary.org-netbeans-modules-php-phpunit.test_2e_run_2e_phpunit_2e_only=false
 code.analysis.excludes=
 file.reference.espresso-logical-test=test
+file.reference.espresso-logical-vendor=vendor
 ignore.path=
 include.path=\
-    ${php.global.include.path}
+    ${php.global.include.path}:\
+    ${file.reference.espresso-logical-vendor}
 php.version=PHP_53
 source.encoding=UTF-8
 src.dir=src
